assets/style.css
/* ... */
/*  
    text: #0B3866;
    buttons: #95F9C3;
*/

* {
    font-family:'Montserrat', sans-serif !important;
}

body {
    font-size: 18px;
    color: #0B3866;
    font-size: 1em;
    font-weight: 400;
    line-height: 1.5;
    font-family:'Montserrat', sans-serif !important;
    margin: 0;
}

img, video {
    image-rendering:optimizeQuality;
    height: auto;
    max-width: 100%;
}

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
    display: block;
}

a, abbr, acronym, address, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, ol, output, p, pre, q, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

::selection {
    background-color: #95F9C3;
    color: #0B3866;
}

::-webkit-selection, ::-moz-selection, ::o-selection {
    background-color: #95F9C3;
    color: #0B3866;
}

.primary-navbar {
    padding: 1.2rem 0;
    box-shadow: none;
    z-index: auto;
    background-color: rgba(255, 255, 255, 0.75);
    backdrop-filter: blur(12px);
    -o-backdrop-filter:blur(12px);
    min-height: 3rem;
    position: fixed;
    width: 100%;
    z-index: 30;
}

.container {
    flex-grow: 1;
    margin: 0 auto;
    position: relative;
    width: auto;
}  

.primary-navbar > .container {
    align-items: stretch;
    display: flex;
    min-height: 3.25rem;
    width: 100%;
}

@media screen and (max-width: 1023px) {
    .primary-navbar > .container {
        display: block;
    }
}

.navbar-menu {
    background-color: transparent !important;
    backdrop-filter: blur(6px);
}

.navbar-brand {
    align-items: stretch;
    display: flex;
    flex-shrink: 0;
    min-height: 3.25rem;
}

.navbar .navbar-brand a.navbar-item {
    background-color: transparent;
}

@media screen and (max-width: 1023px) {
    .navbar-brand .navbar-item, .navbar-tabs .navbar-item {
        align-items: center;
        display: flex;
    }
}

a.navbar-item, .navbar-link {
    cursor: pointer;
}

.navbar-item {
    flex-grow: 0;
    flex-shrink: 0;
    margin-left: .5em !important;
}

.navbar-item:hover {
    background-color: transparent !important;
    color: #485fc7 !important;
}

.navbar-item {
    color: #0B3866;
    display: block;
    line-height: 1.5;
    padding: 0.5rem .75rem !important;
    position: relative;
}

a, .button {
    transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
    font-weight: 400;
}

a {
    color: #1a8cff;
    cursor: pointer;
    text-decoration: none;
}

svg:not(:host).svg-inline--fa, svg:not(:root).svg-inline--fa {
    overflow: visible;
    box-sizing: content-box;
}

.has-text-primary {
    color: #0B3866 !important;
}

.fa-4x {
    font-size: 4em;
}

.dropdown {
    padding-top: .5em !important;
}

.dropdown button {
    background-color: white !important;
}

.dropdown button:hover {
    background-color:#f8f8f8 !important;
}

.dropdown-content {
    text-align: left !important;
}

a.dropdown-item {
    font-size: 17px !important;
}

a.dropdown-item:hover {
    color: #485fc7 !important;
}

.dropdown button ion-icon {
    opacity: 1 !important;
    color: #222222 !important;
    vertical-align: middle;
    font-size: 16px !important;
}

.svg-inline--fa {
    display: var(--fa-display,inline-block);
    height: 1em;
    overflow: visible;
    vertical-align: -.125em;
}

.navbar .navbar-brand .navbar-burger {
    height: inherit;
}

.navbar-burger {
    text-rendering: optimizeLegibility;
    color: #0B3866;
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    background: none;
    border: none;
    cursor: pointer;
    display: block;
    height: 3.25rem;
    position: relative;
    width: 3.25rem;
    margin-left: auto;
    margin-right: .5em !important;
}

span {
    font-style: inherit;
    font-weight: inherit;
}

.navbar-burger span {
    text-rendering: optimizeLegibility;
    background-color: currentColor;
    display: block;
    height: 1.25px !important;
    left: calc(50% - 8px);
    position: absolute;
    -webkit-transform-origin: center;
    transform-origin: center;
    margin: .1em;
    transition-duration: 25ms;
    transition-property: background-color, opacity, -webkit-transform;
    transition-property: background-color, opacity, transform;
    transition-property: background-color, opacity, transform, -webkit-transform;
    transition-timing-function: ease-out;
    width: 20px !important;
}

.navbar-burger span:nth-child(1) {
    top: calc(50% - 6px);
}

.navbar-burger span:nth-child(2) {
    top: calc(50% - 1px);
}

.navbar-burger span:nth-child(3) {
    top: calc(50% + 4px);
}

.navbar-menu {
    text-align: center !important;
}

.navbar-menu.is-active {
    display: flex !important;
    justify-content: center !important;
    align-items: center !important;
}


@media (max-width: 1024px) {
    .navbar-end {
        margin-bottom: 4%;
    }
    .navbar-end .navbar-item {
        margin-top: 12.5% !important;
    }
}

@media screen and (min-width: 1024px) {
    .primary-navbar > .container .navbar-menu, .container > .navbar .navbar-menu {
        margin-right: -0.75rem;
    }
    .navbar-start {
        justify-content: flex-start;
        margin-right: auto;
    }
    .navbar-end {
        justify-content: flex-end !important;
        margin-left: auto !important; 
    }
    .primary-navbar, .navbar-menu, .navbar-start, .navbar-end {
        align-items: stretch;
        display: flex;
    }
}

@media screen and (min-width: 769px) {
    .navbar .navbar-menu {
        box-shadow: none;
        padding: 0.5rem 0;
    }
}
/* ... */

